--- a/AdminDashboard/web/staffadd.html
+++ b/AdminDashboard/web/staffadd.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a href="AdminHome.jsp">Pending Approves</a></li>
                         <li><a href="staffmonitor.jsp">Monitor Staff</a></li>
-                        <li><a href="#">Monitor Clients</a></li>
+                        <li><a href="clientmonitor.jsp">Monitor Clients</a></li>
                         <li class="active"><a href="staffadd.html">Add to Staff</a></li>
                         <li><a href="#">Log Out</a></li>
                     </ul>
