--- a/AdminDashboard/web/staffadd.html
+++ b/AdminDashboard/web/staffadd.html
@@ -66,7 +66,7 @@
                         
                         <div class="form-group">  
                           
-                            <button type="submit" class="btn btn-success">Register</button><button type="reset" class="btn btn-success" >RESET</button>
+                            <button type="submit" class="btn btn-success">Register</button><br><br><button type="reset" class="btn btn-success" >RESET</button>
                         </div>
                     </form>
                 </div>
