--- a/AdminDashboard/web/staffadd.html
+++ b/AdminDashboard/web/staffadd.html
@@ -61,7 +61,7 @@
                         
                         <div class="form-group">  
                              <label>Password</label>
-                             <input type="text" class="form-control" id="password" name="password" placeholder="Password" required>
+                             <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
                         </div>
                         
                         <div class="form-group">  
