--- a/StaffG1Proj/web/tickets.html
+++ b/StaffG1Proj/web/tickets.html
@@ -14,7 +14,7 @@
         <header>
         <div class="main">
             <div class="navbar">
-                <a href="AdminHome1.jsp"><img src="3.png" class="logo"></a>
+                <a href="Flights.jsp"><img src="3.png" class="logo"></a>
                 <nav>
                     <ul>
                         
